CSS sytle added

--- a/index.html
+++ b/index.html
@@ -2,20 +2,36 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link rel="stylesheet" href="style.css" type="text.css">
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
   </head>
   <body>
     <header>
       <h1>Discover hidden places in the world around you</h1>
       <a href="#">Download Excursion (Coming soon!)</a>
     </header>
-   <main>
-      <video src="resources/excursion.mp4"></video>
-      <h2>Your personal travel guide</h2>
-      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-      <img src="resources/camp.jpg" alt="camp">
+    <main>
+      <div class="video">
+        <video autoplay loop>
+          <source src="resources/excursion.mp4" type="video/mp4">
+        </video>
+      </div>
+
+      <div class="textlink">
+        <h2>Your personal travel guide</h2>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    </div>
+
+    <div class="camp">
+      <img src="resources/camp.jpg" alt="camp" >
+    </div>
+    <div class="icon">
       <img src="resources/phone.png" alt="phone icon">
+    </div>
+
+    <div class="textlink">
       <h2>Coming Soon for iPhone and Android</h2>
+      <a href="#">Download Excursion (Coming soon!)</a>
+    </div>
    </main>
    <footer>
       <h4> &#169;copyright</h4>
